--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,16 @@
 	<name>gala-demo</name>
 	<url>http://maven.apache.org</url>
 
+	<modules>
+		<module>gala-demo-util</module>
+		<module>gala-demo-thread</module>
+		<module>gala-demo-sjjg</module>
+		<module>gala-demo-sjms</module>
+		<module>gala-demo-dubbox</module>
+		<module>gala-demo-web</module>
+		<module>gala-demo-webapp</module>
+	</modules>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -18,22 +28,95 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- spring -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>4.2.1.RELEASE</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>3.2.2.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5</version>
+		</dependency>
+		<!--dubbox -->
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.sgroschupf</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty</artifactId>
+			<version>${jetty_version}</version>
+		</dependency>
+		<!-- 本地编译dubbox jar -->
+		<!-- 基于https://github.com/dangdangdotcom/dubbox.git -->
+		<!-- restful实现由dubbo-rpc-rest -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+			<version>${dubbo.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo-rpc-rest</artifactId>
+			<version>${dubbo.version}</version>
+		</dependency>
+		<!-- servlet -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>${servlet.api.version}</version>
+			<!-- <scope>provied</scope> -->
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
+			<version>${jsp.api.version}</version>
+			<!-- <scope>provied</scope> -->
+		</dependency>
+		<dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+			<version>${el.api.version}</version>
+			<!-- <scope>provied</scope> -->
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp.jstl</groupId>
+			<artifactId>javax.servlet.jsp.jstl-api</artifactId>
+			<version>${jstl.api.version}</version>
+			<!-- <scope>provied</scope> -->
+		</dependency>
 	</dependencies>
 
 	<properties>
+		<dubbo.version>2.8.4</dubbo.version>
+		<jetty_version>6.1.26</jetty_version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jdk.version>1.7</jdk.version>
 		<jetty.maven.version>9.0.4.v20130625</jetty.maven.version>
 		<tomcat.maven.version>2.1</tomcat.maven.version>
 		<junit.version>4.8.2</junit.version>
-	</properties>
 
-	<modules>
-		<module>gala-demo-util</module>
-		<module>gala-demo-thread</module>
-		<module>gala-demo-sjjg</module>
-		<module>gala-demo-sjms</module>
-	</modules>
+		<servlet.api.version>3.1.0</servlet.api.version>
+		<jsp.api.version>2.2.1</jsp.api.version>
+		<el.api.version>2.2.5</el.api.version>
+		<jstl.api.version>1.2.1</jstl.api.version>
+	</properties>
 
 	<build>
 		<defaultGoal>install</defaultGoal>
