--- a/pom.xml
+++ b/pom.xml
@@ -32,14 +32,14 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>4.2.1.RELEASE</version>
+			<version>${spring.version}</version>
 			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>3.2.2.RELEASE</version>
+			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -61,8 +61,14 @@
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty</artifactId>
-			<version>${jetty_version}</version>
+			<version>${jetty.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.thrift</groupId>
+			<artifactId>libthrift</artifactId>
+			<version>0.9.2</version>
+		</dependency>
+
 		<!-- 本地编译dubbox jar -->
 		<!-- 基于https://github.com/dangdangdotcom/dubbox.git -->
 		<!-- restful实现由dubbo-rpc-rest -->
@@ -101,11 +107,27 @@
 			<version>${jstl.api.version}</version>
 			<!-- <scope>provied</scope> -->
 		</dependency>
+		<!-- other -->
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.8</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
 		<dubbo.version>2.8.4</dubbo.version>
-		<jetty_version>6.1.26</jetty_version>
+		<jetty.version>6.1.26</jetty.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jdk.version>1.7</jdk.version>
 		<jetty.maven.version>9.0.4.v20130625</jetty.maven.version>
@@ -116,6 +138,8 @@
 		<jsp.api.version>2.2.1</jsp.api.version>
 		<el.api.version>2.2.5</el.api.version>
 		<jstl.api.version>1.2.1</jstl.api.version>
+
+		<spring.version>3.2.9.RELEASE</spring.version>
 	</properties>
 
 	<build>
